--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,10 @@
-version: '3.7'
 services:
   db:
-    image: mysql:8.0.19
+    # We use a mariadb image which supports both amd64 & arm64 architecture
+    image: mariadb:10.6.4-focal
+    # If you really want to use MySQL, uncomment the following line
+    #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
-    restart: always
     volumes:
       - db_data:/var/lib/mysql
     restart: always
@@ -12,6 +13,9 @@ services:
       - MYSQL_DATABASE=wordpress
       - MYSQL_USER=wordpress
       - MYSQL_PASSWORD=wordpress
+    expose:
+      - 3306
+      - 33060
   wordpress:
     image: wordpress:latest
     ports:
